# mastersproject

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  cond_data_4frac  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
Convergence analysis/: abstract-grid-convergence.ipynb
src/mastersproject/: README.md  pytest.ini
src/mastersproject/GTS/: __init__.py  fit_plane.py  gmsh_to_gb.py  time_machine.py  time_protocols.py
src/mastersproject/GTS/ISC_data/: __init__.py  fracture.py  isc.py
src/mastersproject/GTS/deprecated_files/: fractures.py  geological_model_visualization.py  old_fit_plane.py  prototype_fracture_network.py  temp_data_extraction.py  tests.py
src/mastersproject/GTS/isc_modelling/: ISCGrid.py  __init__.py  contact_mechanics_biot.py  flow.py  general_model.py  isc_box_model.py  isc_frac_data.txt  isc_model.py  mechanics.py  optimal_scaling.py  parameter.py  setup.py
src/mastersproject/GTS/test/: __init__.py  standard_grids.py  test optimal scaling full model.ipynb  test_biot_class_methods.py  test_biot_parameter_scaling.py  test_convergence_study.py  test_create_grid.py  test_mechanics_class_methods.py  test_parameter_scaling_simple_grid.py  test_protocols.py  (+2 more)
src/mastersproject/biot/: __init__.py  biot.py
src/mastersproject/mechanics/: mechanics.py
src/mastersproject/refinement/: __init__.py  convergence.py  grid_convergence.py  grid_refinement.py  refinement.py  run_convergence_study.py
src/mastersproject/util/: __init__.py  logging_util.py  pickle_handler.py
tutorials/: variable scaling for biot.ipynb
(+29 files in other folders)
