[tool.poetry]
name = "mastersproject"
version = "0.1.0"
description = ""
authors = ["haakon-e <haakonervik@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# porepy = {path = "../porepy/porepy/"}
pendulum = "^2.0"
pandas = "^1.0.4"
pydantic = "^1.5.1"
# robust-point-in-polyhedron = {path = "../robust_point_in_polyhedron"}

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^3.8.3"
mypy = "^0.782"
isort = "^4.3.21"
pytest-mock = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
